# Meridian

./: .gitignore  README.md  memo.md
client/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
client/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
client/lib/: api.ts  sidebar-store.ts  stream.ts  trace-store.ts  types.ts
docs/: rfc.md
server/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260513_0001_initial.py  20260513_0002_rename_turns_to_messages_add_title.py  20260513_0003_message_step_durations.py
server/app/: config.py  main.py
server/app/api/: sse.py
server/app/clients/: llm.py
server/app/clients/crm/: __init__.py  base.py  hubspot.py  stub.py
server/app/data/: __init__.py  careers.json  learners.json  programs.json
server/app/db/: __init__.py  models.py  repository.py  session.py
server/app/observability/: __init__.py  tracing.py
server/app/orchestrator/: __init__.py  graph.py  state.py
server/app/orchestrator/agents/: __init__.py  career.py  discovery.py
server/app/orchestrator/nodes/: __init__.py  load_context.py  persist.py  plan.py  synthesize.py  title.py
server/app/schemas/: __init__.py  conversation.py  events.py  learner.py  orchestrator.py
server/evals/: golden_dataset.jsonl  run_evals.py
server/tests/: conftest.py  test_conversation_repo.py  test_conversations_api.py  test_hubspot_circuit_breaker.py  test_routing.py  test_schemas.py  test_stub_crm.py  test_title_generation.py
(+16 files in other folders)
